fix run.sh